--- a/index.html
+++ b/index.html
@@ -1,13 +1,330 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>  
+  <head>
     <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 4</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
+    <title>Рассвет</title>
+    <script src="https://www.x3dom.org/download/1.7.2/x3dom-full.js"></script>
+	<link rel="stylesheet" type="text/css" href='https://www.x3dom.org/x3dom/release/x3dom.css'> </link>
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+    <h1>Рассвет мертвецов</h1>
+    <X3D  width="1240" height="640" id="x3d" xmlns="https://www.x3dom.org/x3dom">
+	<Scene>
+	<Background backurl='sky.jpg'></Background>
+		
+		<PointLight location="0 30 -100" radius="1000" color="1 0 0" intensity="1" shadowIntensity="0.5" shadowMapSize="512"></PointLight>
+		<Fog visibilityRange='250'></Fog>
+		
+		<TimeSensor id="Time" DEF='Time' cycleInterval='5' loop='true' enabled='true'></TimeSensor>
+		<TimeSensor DEF='Time2' id='Time2' cycleInterval='6' loop='true' enabled='true'> </TimeSensor>
+        <PositionInterpolator DEF='PosInt' key='0 0.25 0.5 0.75 1' keyValue='-5 10 5, -6 13 -6, 6 13 -5, 5 12 6, -5 10 5 '></PositionInterpolator>
+        <OrientationInterpolator DEF='ZvInt' key='0 0.5 1' keyValue='1 0 0 0, 1 0 0 3.14, 1 0 0 6.28'></OrientationInterpolator>
+        <ColorInterpolator DEF='ColInt' key='0 0.20 0.40 0.60 0.80 1' keyValue='0.1 0.1 0.1, 0.4 0.1 0.1, 0.7 0.1 0, 1 0 0, 0.4 0.1 0.1, 0.1 0.1 0.1'></ColorInterpolator>
+		
+		
+		<PositionInterpolator DEF='Zomb' key='0 .20 .40 .60 .80 1' 
+                           keyValue='0 0 0, 0 4 0, 0 8 0, 0 8 0, 0 4 0, 0 0 0'> </PositionInterpolator>
+       <PositionChaser DEF='Z' duration='1'></PositionChaser>
+	   <OrientationInterpolator DEF='Hend' key='0 0.20 0.4 0.6 0.8 1' keyValue='1 0 0 0, 1 0 0 -0.7854, 1 0 0 -1.5708, 1 0 0 -1.5708, 1 0 0 -0.7854, 1 0 0 0'></OrientationInterpolator>
+	   <OrientationInterpolator DEF='Hend2' key='0 0.20 0.4 0.6 0.8 1' keyValue='1 0 0 0, 1 0 0 -0.7854, 1 0 0 -1.5708, 1 0 0 -1.5708, 1 0 0 -0.7854, 1 0 0 0'></OrientationInterpolator>
+	   
+
+        <Transform DEF='Sup'>
+			 <Transform id="Sp">
+				<Inline url="sup.x3d"></Inline>
+			</Transform>
+		</Transform>
+		
+		<Transform rotation="0 1 0 1.5708">
+		<Transform translation="0 -6 0">
+		<Group DEF='Krest'>
+		<Transform rotation="1 0 0 1.5708">
+		<Transform rotation="0 0 1 1.5708">
+		<Transform translation="0 0 -13">
+		<Transform translation="-0.9 0 0">
+		<Shape>
+        <Appearance>
+          <ImageTexture url="lol.jpg"></ImageTexture>
+          <Material></Material>
+        </Appearance>
+         <IndexedFaceSet solid="false" colorpervertex= "true" coordIndex=
+		 '0 1 2 3 -1    3 2 6 5 -1    1 2 6 7  -1      6 5 4 7  -1    0 3 5 4  -1    0 1 7 4  -1       8 9 10 11 -1    
+		10 11 12 13 -1     8 9 14 15 -1     12 13 14 15 -1     9 10 13 14 -1     11 8 15 12 -1   
+		16 17 18 19 -1   0 4 19 18 -1    0 8 15 4 -1  8 15 16 17 -1   0 8 17 18 -1  4 15 16 19  -1     1 9 21 20 -1 
+		 1 20 23 7 -1  23 7 14 22 -1   14 9 21 22 -1  9 1 7 14 -1  21 20 23 22 -1    0 1 9 8 -1   4 7 14 15 -1   '>
+								<Coordinate point=
+								'0 0 0 
+								0 0 -2
+								2 0 -2
+								2 0 0
+								0 -2 0
+								2 -2 0 
+								2 -2 -2
+								0 -2 -2
+								-2 0 0 
+								-2 0 -2 
+								-4 0 -2 
+								-4 0 0 
+								-4 -2 0 
+								-4 -2 -2
+								-2 -2 -2
+								-2 -2 0
+								-2 -2 5 
+								-2 0 5
+								0 0 5
+								0 -2 5
+								0 0 -4
+								-2 0 -4
+								-2 -2 -4 
+								0 -2 -4'></Coordinate>
+		</IndexedFaceSet> 
+		</Shape>
+		</Transform>
+		</Transform>
+		</Transform>
+		</Transform>
+
+<!-- ЗОМБИ -->
+<Transform DEF="Zomby" id="Zom">
+<Transform translation="-2 5 -1.5">
+<Transform rotation="0 1 0 4.7124">
+<Transform scale="6 6 6">
+    <Transform translation="0 -0.5 0" rotation="0,1,0,0">
+        <!-- Голова -->
+        <Transform translation="0 0.45 0">
+            <Shape>
+                <Appearance>
+                    <ImageTexture url="bra.png"></ImageTexture>
+                </Appearance>
+                <Sphere radius="0.17"></Sphere>
+            </Shape>
+        </Transform>
+        <!-- Тело основное -->
+        <Transform translation="0 -0.1 0">
+            <Shape>
+                <Appearance>
+                    <ImageTexture url="bra2.jpg"></ImageTexture>
+                </Appearance>
+                <Cylinder radius="0.22" height="0.6"></Cylinder>
+            </Shape>
+        </Transform>
+        <!-- Скругление сверху -->
+        <Transform translation="0 0.1 0">
+            <Shape>
+                <Appearance>
+                   <ImageTexture url="bra2.jpg"></ImageTexture>
+                </Appearance>
+                <sphere radius="0.22"></sphere>
+            </Shape>
+        </Transform>
+        <!-- Скругление снизу -->
+        <Transform translation="0 -0.4 0">
+            <Shape>
+                <Appearance>
+                   <ImageTexture url="bra3.jpg"></ImageTexture>
+                </Appearance>
+                <sphere radius="0.22"></sphere>
+            </Shape>
+        </Transform>
+        <!-- правая нога -->
+        <Transform DEF="RigthLeg" translation="0.15 -0.9 0" center="0 0.5 0">
+            <Shape>
+                <Appearance>
+                   <ImageTexture url="bra3.jpg"></ImageTexture>
+                </Appearance>
+                <Cylinder radius="0.08" height="1"></Cylinder>
+            </Shape>
+        </Transform>
+        <!-- левая нога -->
+        <Transform DEF="LeftLeg" translation="-0.15 -0.9 0" center="0 0.5 0">
+            <Shape>
+                <Appearance>
+                    <ImageTexture url="bra3.jpg"></ImageTexture>
+                </Appearance>
+                <Cylinder radius="0.08" height="1"></Cylinder>
+            </Shape>
+        </Transform>
+        <!-- левая рука -->
+        <Transform DEF="LeftHand" translation="-0.27 -0.1 0" center="0 0.3 0">
+            <Shape>
+                <Appearance>
+                   <ImageTexture url="bra2.jpg"></ImageTexture>
+                </Appearance>
+                <Cylinder radius="0.08" height="0.6"></Cylinder>
+            </Shape>
+        </Transform>
+        <!-- правая рука -->
+        <Transform DEF="RigthHand" translation="0.28 -0.1 0" center="0 0.3 0">
+            <Shape>
+                <Appearance>
+                    <ImageTexture url="bra2.jpg"></ImageTexture>
+                </Appearance>
+                <Cylinder radius="0.08" height="0.6"></Cylinder>
+            </Shape>
+        </Transform>
+
+    </Transform>
+</Transform>
+</Transform>
+</Transform>
+</Transform>
+		
+		
+		<Transform translation="-35 0 -27">
+		<Shape>
+          <ElevationGrid xDimension="7" zDimension="6" xSpacing="10" zSpacing="10" solid="false"
+                          height=
+                                  "0, 1, 0.5, 0.5, 1, 1, 0,
+                                  0, 0.5, 0.25, 0.25, 0.5, 1,0,
+                                  0, 0.25, 0, 7, 7, 0.5,0,
+                                  0, 0.25, 0, 7, 7, 0.5,0,
+                                  0, 0.5, 0.25, 0.25, 0.5, 1,0,
+                                  0, 1, 0.5, 0.5, 1, 1, 0">
+          </ElevationGrid>
+          <Appearance>
+            <ImageTexture url="kek.jpg"></ImageTexture>
+          </Appearance>
+        </Shape>
+		</Transform>
+		
+		
+		<Transform translation="0 7 0">
+		<Transform translation="0 0 -2">
+		<Transform rotation="0 1 0 4.7124">
+		<Shape>
+            <IndexedFaceSet ccw="true" colorPerVertex="true" convex="true" creaseAngle="0" normalPerVertex="true" solid="false" 
+                            coordIndex="0 4 7 3 -1 5 6 2 1 -1 4 5 6 7 -1 6 7 3 2 -1" 
+                            colorIndex="0 1 2 3 -1 4 5 6 0 -1 1 2 3 4 -1 5 6 0 1 -1">
+              <Coordinate point="-5 0 5, 5 0 5, 5 0 -5, -5 0 -5, -5 1 5, 5 1 5, 5 1 -5, -5 1 -5"></Coordinate>
+            </IndexedFaceSet>
+			<Appearance>
+            <Material DEF='Mat'></Material>
+          </Appearance>
+          </Shape>
+		  </Transform>
+		  </Transform>
+		  </Transform>
+
+		<Transform DEF='Zv' center="0 14 -1.9">
+			<Transform translation="0 13 0">
+				<Transform translation="0 0 -3.1">
+					<Transform translation="-0.1 0 0">
+						<Transform rotation="0 1 0 4.7124">
+							<Transform scale="0.3 0.3 0.3">
+		<Shape>
+			<Appearance>
+				<Material> </Material>
+			</Appearance>
+			<IndexedLineSet coordIndex='0 1 2 3 4 0 -1'>
+			<Coordinate point="0 0 0, 4 8 0, 8 0 0, -1 5 0, 9 5 0"></Coordinate>
+			</IndexedLineSet>
+		</Shape>
+							</Transform>
+						</Transform>
+					</Transform>
+				</Transform>
+			</Transform>
+		</Transform>
+		</Group>
+
+		
+		<Transform translation="60 0 0">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		
+		<Transform translation="-60 0 0">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		
+		<Transform translation="0 0 50">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		
+		<Transform translation="0 0 -50">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		
+		<Transform translation="60 0 0">
+		<Transform translation="0 0 50">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		</Transform>
+		
+		<Transform translation="-60 0 0">
+		<Transform translation="0 0 -50">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		</Transform>
+		
+		<Transform translation="60 0 0">
+		<Transform translation="0 0 -50">
+        <Shape USE="Krest">
+        </Shape>
+		</Transform>
+		</Transform>
+
+		<Transform translation="-60 0 0">
+			<Transform translation="0 0 50">
+			<Shape USE="Krest">
+			</Shape>
+			</Transform>
+		</Transform>
+	</Transform>
+	</Transform>
+	
+
+			
+		<ROUTE fromNode='Time' fromField='fraction_changed' 
+               toNode='PosInt' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='PosInt' fromField='value_changed' 
+               toNode='Sup' toField='set_translation'>
+        </ROUTE>
+
+        <ROUTE fromNode='Time' fromField='fraction_changed'
+               toNode='ColInt' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='ColInt' fromField='value_changed' 
+               toNode='Mat' toField='set_diffuseColor'>
+        </ROUTE>
+
+        <ROUTE fromNode='Time' fromField='fraction_changed'
+               toNode='ZvInt' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='ZvInt' fromField='value_changed' 
+               toNode='Zv' toField='set_rotation'>
+        </ROUTE>
+	
+	
+		<ROUTE fromNode='Time2' fromField='fraction_changed' 
+               toNode='Zomb' toField='set_fraction'></ROUTE>
+        <ROUTE fromNode='Zomb' fromField='value_changed' 
+               toNode='Z' toField='set_destination'></ROUTE>
+        <ROUTE fromNode='Z' fromField='value_changed' 
+               toNode='Zomby' toField='set_translation'></ROUTE>  
+
+		<ROUTE fromNode='Time2' fromField='fraction_changed'
+               toNode='Hend' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='Hend' fromField='value_changed' 
+               toNode='LeftHand' toField='set_rotation'>
+        </ROUTE>	
+
+		<ROUTE fromNode='Time2' fromField='fraction_changed'
+               toNode='Hend2' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='Hend2' fromField='value_changed' 
+               toNode='RigthHand' toField='set_rotation'>
+        </ROUTE>		
+
+	</Scene>
+    </X3D>
+	
+  </body>
 </html>
